@@ -1,71 +1,62 @@
 package service.impl;
-
+import dto.*;
+import model.*;
 import dao.ExamAreaDAO;
 import dao.impl.ExamAreaDAOImpl;
-import model.exam.ExamArea;
+import model.ExamArea;
 import service.ExamAreaService;
-
 import java.util.List;
-
 public class ExamAreaServiceImpl implements ExamAreaService {
-    
     private final ExamAreaDAO dao = new ExamAreaDAOImpl();
-
     @Override
-    public ExamArea findById(int id) {
-        return dao.findById(id);
+    public ExamArea getById(int id) {
+        return dao.getById(id);
     }
-
     @Override
     public List<ExamArea> search(String keyword, String type) {
         return dao.search(keyword, type);
     }
-
+    @Override
+    public List<ExamArea> getActiveTheoryRooms() { return dao.getActiveTheoryRooms(); }
     @Override
     public int countAll() {
         return dao.countAll();
     }
-
     @Override
     public SaveResult save(ExamArea area, int adminUserId) {
-        if (area.getAreaName() == null || area.getAreaName().trim().isEmpty()) {
+        if (area.getAreaName() == null || area.getAreaName().isBlank()) {
             return new SaveResult(false, "Vui lòng nhập tên khu vực thi.", area.getExamAreaId());
         }
-        if (area.getAreaType() == null || area.getAreaType().trim().isEmpty()) {
+        if (area.getAreaType() == null || area.getAreaType().isBlank()) {
             return new SaveResult(false, "Vui lòng chọn loại khu vực.", area.getExamAreaId());
         }
-        if (area.getLocation() == null || area.getLocation().trim().isEmpty()) {
+        if (area.getLocation() == null || area.getLocation().isBlank()) {
             return new SaveResult(false, "Vui lòng nhập địa chỉ khu vực.", area.getExamAreaId());
         }
         if (area.getCapacity() <= 0) {
             return new SaveResult(false, "Sức chứa phải lớn hơn 0.", area.getExamAreaId());
         }
-
         boolean isEdit = area.getExamAreaId() > 0;
         if (isEdit) {
-            
             boolean ok = dao.update(area);
             if (ok) {
-                return new SaveResult(true, "da cap nhat khu vuc \"" + area.getAreaName() + "\".", area.getExamAreaId());
+                return new SaveResult(true, "Đã cập nhật khu vực \"" + area.getAreaName() + "\".", area.getExamAreaId());
             } else {
-                return new SaveResult(false, "cap nhat khu vuc that bai", area.getExamAreaId());
+                return new SaveResult(false, "Cập nhật khu vực thất bại.", area.getExamAreaId());
             }
         } else {
-            
-            
             int newId = dao.insert(area);
             boolean ok = newId > 0;
             if (ok) {
                 return new SaveResult(true, "Đã thêm khu vực \"" + area.getAreaName() + "\".", newId);
             } else {
-                return new SaveResult(false, "them khu vuc that bai", 0);
+                return new SaveResult(false, "Thêm khu vực thất bại.", 0);
             }
         }
     }
-
     @Override
     public DeleteResult delete(int id, int adminUserId) {
-        ExamArea area = dao.findById(id);
+        ExamArea area = dao.getById(id);
         if (area == null) {
             return new DeleteResult(false, "Khu vực không tồn tại.");
         }
@@ -77,4 +68,3 @@ public class ExamAreaServiceImpl implements ExamAreaService {
         }
     }
 }
-
