@@ -1,76 +1,122 @@
 package service.impl;
-
-import dao.ExamDeviceManageDAO;
-import dao.impl.ExamDeviceManageDAOImpl;
-import dto.exam.ExamDeviceViewDTO;
+import dto.*;
+import model.*;
+import dao.ExamDeviceDAO;
+import dao.impl.ExamDeviceDAOImpl;
+import dao.AuditDAO;
+import dao.impl.AuditDAOImpl;
+import dao.ExamAreaDAO;
+import dao.impl.ExamAreaDAOImpl;
+import dto.ExamDeviceViewDTO;
+import model.Audit;
+import model.ExamArea;
+import model.ExamDevice;
 import service.ExamDeviceService;
-
+import enums.DeviceStatus;
+import java.util.ArrayList;
 import java.util.List;
-
+import java.util.Map;
+import java.util.stream.Collectors;
 public class ExamDeviceServiceImpl implements ExamDeviceService {
-    
-    private final ExamDeviceManageDAO dao = new ExamDeviceManageDAOImpl();
-
+    private final ExamDeviceDAO dao = new ExamDeviceDAOImpl();
+    private final ExamAreaDAO areaDao = new ExamAreaDAOImpl();
+    private final AuditDAO auditDAO = new AuditDAOImpl();
     @Override
     public List<ExamDeviceViewDTO> search(String keyword, String status) {
-        return dao.search(keyword, status);
+        boolean isActive = status == null || status.isBlank() || DeviceStatus.isActive(status);
+        List<ExamDevice> devices = dao.search(keyword, isActive);
+        if (devices.isEmpty()) {
+            return new ArrayList<>();
+        }
+        List<ExamArea> areas = areaDao.search(null, null);
+        Map<Integer, String> areaMap = areas.stream()
+                .collect(Collectors.toMap(ExamArea::getExamAreaId, ExamArea::getAreaName));
+        List<ExamDeviceViewDTO> dtos = new ArrayList<>();
+        for (ExamDevice d : devices) {
+            ExamDeviceViewDTO dto = mapToDTO(d);
+            dto.setAreaName(areaMap.get(d.getExamAreaId()));
+            dtos.add(dto);
+        }
+        return dtos;
     }
-
     @Override
     public int countAll() {
         return dao.countAll();
     }
-
     @Override
     public int countByStatus(String status) {
-        return dao.countByStatus(status);
+        return dao.countByStatus(DeviceStatus.isActive(status));
     }
-
     @Override
     public SaveResult save(ExamDeviceViewDTO dev, Integer adminUserId) {
-        if (dev.getDeviceName() == null || dev.getDeviceName().trim().isEmpty()) {
+        if (dev.getDeviceName() == null || dev.getDeviceName().isBlank()) {
             return new SaveResult(false, "Vui lòng nhập tên máy thi.", dev.getExamDeviceId());
         }
-        if (dev.getDeviceType() == null || dev.getDeviceType().trim().isEmpty()) {
+        if (dev.getDeviceType() == null || dev.getDeviceType().isBlank()) {
             return new SaveResult(false, "Vui lòng nhập loại thiết bị.", dev.getExamDeviceId());
         }
-        if (dev.getStatus() == null || dev.getStatus().trim().isEmpty()) {
+        if (dev.getStatus() == null || dev.getStatus().isBlank()) {
             return new SaveResult(false, "Vui lòng chọn tình trạng máy.", dev.getExamDeviceId());
         }
         if (dev.getExamAreaId() <= 0) {
             return new SaveResult(false, "Vui lòng chọn khu vực thi.", dev.getExamDeviceId());
         }
-
+        ExamDevice model = new ExamDevice();
+        model.setExamDeviceId(dev.getExamDeviceId());
+        model.setDeviceName(dev.getDeviceName());
+        model.setDeviceType(dev.getDeviceType());
+        model.setActive(DeviceStatus.isActive(dev.getStatus()));
+        model.setExamAreaId(dev.getExamAreaId());
         boolean isEdit = dev.getExamDeviceId() > 0;
         if (isEdit) {
-            boolean ok = dao.update(dev, adminUserId);
+            boolean ok = dao.update(model);
             if (ok) {
+                logAudit(adminUserId, "UPDATE", "ExamDevice", String.valueOf(dev.getExamDeviceId()), "Giám khảo cập nhật máy thi");
                 return new SaveResult(true, "Đã cập nhật máy \"" + dev.getDeviceName() + "\".", dev.getExamDeviceId());
             } else {
                 return new SaveResult(false, "Cập nhật máy thi thất bại.", dev.getExamDeviceId());
             }
         } else {
-            int newId = dao.insert(dev, adminUserId);
+            int newId = dao.insert(model);
             boolean ok = newId > 0;
             if (ok) {
+                logAudit(adminUserId, "INSERT", "ExamDevice", String.valueOf(newId), "Giám khảo thêm máy thi");
                 return new SaveResult(true, "Đã thêm máy \"" + dev.getDeviceName() + "\".", newId);
             } else {
                 return new SaveResult(false, "Thêm máy thi thất bại.", 0);
             }
         }
     }
-
     @Override
     public DeleteResult delete(int id, Integer adminUserId) {
-        ExamDeviceViewDTO dev = dao.findById(id);
+        ExamDevice dev = dao.findById(id);
         if (dev == null) {
             return new DeleteResult(false, "Máy thi không tồn tại.");
         }
         boolean ok = id > 0 && dao.delete(id);
         if (ok) {
+            logAudit(adminUserId, "DELETE", "ExamDevice", String.valueOf(id), "Giám khảo xóa máy thi");
             return new DeleteResult(true, "Đã xóa máy thi.");
         } else {
             return new DeleteResult(false, "Xóa máy thi thất bại.");
         }
+    }
+    private ExamDeviceViewDTO mapToDTO(ExamDevice model) {
+        ExamDeviceViewDTO dto = new ExamDeviceViewDTO();
+        dto.setExamDeviceId(model.getExamDeviceId());
+        dto.setDeviceName(model.getDeviceName());
+        dto.setDeviceType(model.getDeviceType());
+        dto.setStatus(DeviceStatus.fromActive(model.isActive()));
+        dto.setExamAreaId(model.getExamAreaId());
+        return dto;
+    }
+    private void logAudit(Integer userId, String action, String entityName, String entityId, String reason) {
+        Audit audit = new Audit();
+        audit.setUserId(userId != null ? userId : 3);
+        audit.setAction(action);
+        audit.setEntityName(entityName);
+        audit.setEntityId(entityId);
+        audit.setReason(reason);
+        auditDAO.insert(audit);
     }
 }
